# OmochaEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MainProgram.cpp  MainProgram.h  README.md  build.bat  resource.h  resource.rc  vcpkg.json  version_config.h  version_config.h.in
engine/: Block.h  Commands.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  TextInput.h
engine/blocks/: Block.h  BlockExecutor.cpp  BlockExecutor.h  blockTypes.cpp  blockTypes.h
sysmenu/: project.json
util/: AEhelper.cpp  AEhelper.h  Logger.h  Notification.h  TrigValue.h  UnEnt.cpp  UnEnt.h  ebr.cpp  ebr.h  fontName.h
